# copilot-lmstudio-config

./: .gitignore  Cargo.toml  README.md  pyproject.toml
copilot_lmstudio_config/: cli.py
src/: main.rs
